--- a/toll-app/src/main/java/com/proj/toll_app/util/Visualizer.html
+++ b/toll-app/src/main/java/com/proj/toll_app/util/Visualizer.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Route Visualization</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCF-QkHDOFxeF46aaZ6e35z_9a26KAz674"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key='YOUR_GOOGLE_API_KEY"></script>
     <script>
       function initMap() {
         var map = new google.maps.Map(document.getElementById("map"), {
